# ew2024-42a

./: .gitignore  Cargo.toml  README.md  REQUIREMENTS.md  flake.nix  rust-toolchain.toml
axum_backend/: Cargo.toml
axum_backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
dioxus_frontend/: Cargo.toml  Dioxus.toml  README.md  input.css
dioxus_frontend/src/: app.rs  assets.rs  main.rs  routes.rs
dioxus_frontend/src/api/: controller.rs  mod.rs  models.rs
dioxus_frontend/src/components/: mod.rs  navbar.rs  section.rs
dioxus_frontend/src/pages/: blog.rs  home.rs  mod.rs
