[package]
name = "dioxus-frontend"
version = "0.1.0"
authors = ["valentin <valentin@42angouleme.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
derive_more = { workspace = true }
dioxus = { version = "0.5.6", features = ["web", "router"] }

gloo-net = { version = "0.6.0", features = ["http"] }
gloo = "0.11.0"
web-sys = { version = "0.3.72", features = [
    "Window",
    "Document",
    "HtmlAnchorElement",
] }
wasm-bindgen = "0.2.95"

# Debug
log = "0.4.22"
dioxus-logger = "0.5.1"
console_error_panic_hook = "0.1.7"
