[package]
name = "dioxus-frontend"
version = "0.1.0"
authors = ["valentin <valentin@42angouleme.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
derive_more = { workspace = true }
dioxus = { version = "0.5.6", features = ["web", "router"] }

gloo-net = { version = "0.6.0", features = ["http"] }
gloo = "0.11.0"
# Pinned to 0.3.69 because of transitive dependency on wasm-bindgen 0.2.92
js-sys = "=0.3.69"
# Same reason as above
web-sys = { version = "=0.3.69", features = [
    "Window",
    "Document",
    "HtmlAnchorElement",
] }

# Pinned to 0.2.92 because that's the version used by dioxus-cli v0.5.6
# Any higher than that will cause dioxus-cli to fail to compile the project
# due to version mismatch. 
wasm-bindgen = "=0.2.92"

# Debug
log = "0.4.22"
dioxus-logger = "0.5.1"
better-panic = "0.3.0"
console_error_panic_hook = "0.1.7"
