[package]
name = "dioxus-frontend"
version = "0.2.0"
authors = [
    "valentin <valentin@42angouleme.fr>", # Original author
    "killian <oss@xtrm.me>" # Fork
]
edition = "2021"

[dependencies]
common = { workspace = true }
serde_json.workspace = true
serde.workspace = true
strum = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "json"] }
derive_more = { workspace = true }

dioxus = { version = "0.5.6", features = ["web", "router"] }
manganis = { version = "0.2.2", features = ["html"] }
# gloo-net = { version = "0.6.0", features = ["http"] }
# gloo = "0.11.0"

# Pinned to 0.3.69 because of transitive dependency on wasm-bindgen >0.2.92
js-sys = "=0.3.69"
# Same reason as above
web-sys = { version = "=0.3.69", features = [
    "Window",
    "Document",
    "HtmlAnchorElement",
] }
wasm-bindgen = "=0.2.95" # 0.2.92 for Dioxus 0.5.6 on nixpkgs

# Logging and Dev-Ex
log = "0.4.22"
dioxus-logger = "0.5.1"
console_error_panic_hook = "0.1.7"
better-panic = "0.3.0"
default-env = "0.1.1"
